[package]
name = "rust-disruptor"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_disruptor"
path = "src/lib.rs"

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"

# Cargo.toml
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = "line-tables-only"

